# vulnscan-ai

./: .gitignore  CLA.md  COMMANDS.md  CONTRIBUTING.md  README.md  config.sample.json  pyproject.toml  setup.cfg
.copr/: Makefile
.github/: SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
packaging/: COPR.md  build-rpm.sh  config.json  make-repo.sh  release.sh  vulnscan-ai.1  vulnscan-ai.env  vulnscan-ai.spec
packaging/completions/: _vulnscan-ai  vulnscan-ai.bash
packaging/repo-server/: nginx-vulnscan-ai.conf
packaging/systemd/: vulnscan-ai-dashboard.service  vulnscan-ai.service  vulnscan-ai.timer
tests/: test_core.py  test_integration.py
vulnscanai/: __init__.py  __main__.py  audit.py  branding.py  catalog.py  cli.py  config.py  dashboard.py  export.py  export_fix.py  feeds.py  fips.py  hardware.py  http.py  menu.py  models.py  net_classify.py  notify.py  pdfwriter.py  remediation.py  report.py  scap_kb.py  wizard.py
vulnscanai/ai/: __init__.py  base.py  claude.py  deepseek.py  gemini.py  kimi.py  local.py  mistral.py  openai.py
vulnscanai/scanners/: __init__.py  applicability.py  base.py  compliance.py  container.py  dnf_rhsa.py  effective_state.py  exploit.py  fips_posture.py  network.py  nvd.py  openscap.py  oval.py  ports.py  runtime_state.py  ssh_config.py  systemd_security.py  webroot.py
