[build-system]
# Stock RHEL/AlmaLinux 9 ships setuptools 53, which predates PEP 621
# ([project] table) support. Project metadata therefore lives in setup.cfg
# (declarative, fully supported by setuptools >= 40.8), so the package builds
# with the system toolchain on a plain EL9 host.
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"
