[metadata]
name = vulnscan-ai
version = 0.1.10
description = RHEL vulnerability scanner with AI-assisted, approval-gated remediation (FIPS-aware)
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
url = https://example.invalid/vulnscan-ai
keywords = security, rhel, cve, vulnerability, fips, remediation
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Topic :: Security

[options]
packages = find:
python_requires = >=3.9
# Core tool has NO mandatory third-party deps (uses the stdlib over the system
# OpenSSL, which is what is FIPS-validated). PDF output has a built-in
# dependency-free fallback; reportlab only improves layout.
install_requires =

[options.packages.find]
include = vulnscanai*
exclude = tests*

[options.entry_points]
console_scripts =
    vulnscan-ai = vulnscanai.cli:main

[options.extras_require]
pdf =
    reportlab>=3.6
